# bee-osint

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  format.yml
backend/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_07_1654-603b2ecc06a8_init.py  2026_05_07_2300-drop_news_sentiment.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  graphs.py  news.py  notes.py  osint_sources.py  records.py  word_lists.py
backend/app/core/: config.py  exceptions.py  handlers.py  logging.py  security.py
backend/app/core/middleware/: logging.py  request_id.py
backend/app/infrastructure/: database.py  llm.py  scheduler.py
backend/app/models/: __init__.py  graph.py  news.py  note.py  osint_source.py  record.py  user.py  word_list.py
backend/app/repositories/: graph_repository.py  news_repository.py  note_repository.py  osint_source_repository.py  record_repository.py
backend/app/schemas/: graph.py  news.py  note.py  osint_source.py  record.py  user.py  word_list.py
backend/app/services/: graph_service.py  news_service.py  note_service.py  osint_source_service.py  record_service.py  word_list_service.py
backend/app/utils/: entities.py  http_utils.py
backend/deploy/: docker-compose.dev.yml
backend/scripts/: default_user.py
backend/sql/: backup.sql
backend/static/: create_default_admin.py
frontend/: README.md  eslint.config.js  index.html  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.js  _nav.js  index.js  routes.js  store.js
frontend/src/components/: AppBreadcrumb.js  AppContent.js  AppFooter.js  AppHeader.js  AppOpenTabs.js  AppSidebar.js  AppSidebarNav.js  index.js
frontend/src/components/header/: AppHeaderDropdown.js  AppHeaderNotifications.js  index.js
frontend/src/contexts/: AuthContext.js
frontend/src/layout/: DefaultLayout.js
frontend/src/lib/: Icon.js  axios.js  icons.js  ui.js
frontend/src/scss/: style.scss
frontend/src/views/dashboard/: Dashboard.js  MainChart.js
frontend/src/views/graph/: graph.js  graphContextMenu.js
frontend/src/views/news/: news.js
frontend/src/views/notes/: notes.js
frontend/src/views/osintSources/: OsintSources.js
frontend/src/views/records/: records.js
frontend/src/views/wordList/: WordList.js
(+3 files in other folders)
